pages/tutorial.page.css
.lesson .title {
    font-size: 2rem;
    font-weight: 800;
    margin-bottom: 0.5rem;
}

.lesson .title::after {
    width: 40px;
    height: 3px;
    background: var(--accent-color);
    border-radius: 2px;
    content: '';
    margin-bottom: 1.5rem;
    display: block;
}

.lesson {
    min-height: 100vh;
    min-height: 100dvh;
    display: flex;
}

.lesson-point {
    display: flex;
    gap: 1rem;
}

.point-header {
    display: flex;
    flex-direction: column;
}

.point-connector {
    width: 2px;
    background: var(--border-color);
    flex: 1;
    margin: 4px auto;
}

.point-number {
    width: 36px;
    height: 36px;
    border-radius: 50%;
    background: var(--accent-color);
    color: white;
    font-weight: 700;
    display: flex;
    align-items: center;
    justify-content: center;
}

.point-content {
    padding-bottom: 1.5rem;
    flex: auto;
}

.point-content h2 {
    padding-bottom: .5rem;
}

.content-subheader {
    color: #35424a;
    font-size: 1.75rem;
    font-weight: 500;
}

.demo {
    border: 2px dashed #bbb;
    padding: 1rem;
    margin-top: 1rem;
    background: #fafafa;
}

.demo-box {
    border: 2px solid var(--accent-color);
    padding: 15px;
    margin: 15px 0;
    background: #ebf5fb;
}

.selector-demo-box:hover {
    background: var(--accent-color);
}

.box-model {
    padding: 0px 20px 20px 20px;
    text-align: center;
    color: black;
}

.box-model-margin {
    width: 300px;
    border: 1px dashed black;
    background-color: #ae8254;
}

.box-model-border {
    border: 1px solid black;
    background-color: #e3c382;
}

.box-model-padding {
    border: 1px dashed black;
    background-color: #b7c480;
}

.box-model-content {
    border: 1px solid black;
    background-color: #87b2bd;
}

.box-model.box-white {
    background-color: white;
}

code {
    background: #e0e0e0;
    padding: 2px 4px;
    border-radius: 4px;
    font-family: "Courier New", Courier, monospace;
}

pre {
    background: #2d2d2d;
    color: #ccc;
    padding: 1rem;
    border-radius: 5px;
    overflow-x: auto;
}

pre code {
    background: transparent
}

#css-flip-cards,
#html-flip-cards {
    row-gap: var(--bs-gutter-x);
}

#html-flip-cards .flip-card {
    min-height: 150px;
}

#css-flip-cards .flip-card {
    min-height: 230px;
}

.flip-card {
    cursor: pointer;
}

.flip-card-inner {
    position: relative;
    width: 100%;
    height: 100%;
    text-align: center;
    transition: transform 0.8s;
    transform-style: preserve-3d;
}

.flip-card:hover .flip-card-inner {
    transform: rotateY(180deg);
}

.flip-card-front,
.flip-card-back {
    position: absolute;
    width: 100%;
    height: 100%;
    -webkit-backface-visibility: hidden;
    /* Safari */
    backface-visibility: hidden;
}

.flip-card-front {
    color: black;
}

.flip-card-back {
    transform: rotateY(180deg);
}

#start-quiz {
    border-top: 2px solid var(--accent-color);
}

